[gd_scene load_steps=23 format=3 uid="uid://bk3nrnqrwiuyn"]

[ext_resource type="Script" path="res://src/game_stage.gd" id="1_p5hh2"]
[ext_resource type="PackedScene" uid="uid://dq2meide5oo8r" path="res://src/building/building.tscn" id="2_6ic3h"]
[ext_resource type="PackedScene" uid="uid://c0c2agsmpxh27" path="res://src/camera/game_camera.tscn" id="2_8dd5b"]
[ext_resource type="Texture2D" uid="uid://bndw54v2j0x4o" path="res://sprites/background/enviroment/spr_enviroment-HG4.png" id="2_ehhv2"]
[ext_resource type="Texture2D" uid="uid://1qrspg4g0tjn" path="res://sprites/background/enviroment/spr_enviroment-HG3.png" id="3_n851i"]
[ext_resource type="PackedScene" uid="uid://1tnfphburlo7" path="res://src/ui/add_floor_container.tscn" id="4_omg2c"]
[ext_resource type="Texture2D" uid="uid://jyfcetcyslkp" path="res://sprites/background/enviroment/spr_enviroment-HG2.png" id="4_tgj48"]
[ext_resource type="Texture2D" uid="uid://ts16nkjdgn43" path="res://sprites/background/enviroment/spr_enviroment-HG1.png" id="5_lhhng"]
[ext_resource type="Texture2D" uid="uid://ukk6w63jnray" path="res://sprites/background/enviroment/spr_enviroment-floor.png" id="6_57kyt"]
[ext_resource type="Texture2D" uid="uid://b80v1e1peqaia" path="res://sprites/background/enviroment/spr_enviroment-VG.png" id="7_v8uqo"]
[ext_resource type="PackedScene" uid="uid://dk1v0umuvbrtu" path="res://src/building/harvestable_building.tscn" id="8_d4048"]
[ext_resource type="PackedScene" uid="uid://ct4mnxgtkxsbr" path="res://src/ui/tenant_picker.tscn" id="10_77nrk"]
[ext_resource type="Theme" uid="uid://dxmarsh5uodsy" path="res://theme/fonts/new_theme.tres" id="11_r0vxq"]
[ext_resource type="PackedScene" uid="uid://b34uijx7uwlgj" path="res://src/ui/household_info.tscn" id="13_m72j7"]
[ext_resource type="Script" path="res://fade_in_screen.gd" id="14_5vgpf"]
[ext_resource type="Script" path="res://event_accept_button.gd" id="16_2u351"]

[sub_resource type="Gradient" id="Gradient_b53k7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.360784, 0.384314, 0.431373, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hg8x8"]
gradient = SubResource("Gradient_b53k7")
width = 1024
height = 4000

[sub_resource type="Gradient" id="Gradient_27qcy"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0509804, 0.0509804, 0.0509804, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gwuf7"]
gradient = SubResource("Gradient_27qcy")
width = 1024
height = 2000

[sub_resource type="Gradient" id="Gradient_7ub7g"]
colors = PackedColorArray(0.372549, 0.470588, 0.509804, 1, 0.6, 0.894118, 0.439216, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_du4d6"]
gradient = SubResource("Gradient_7ub7g")
width = 5
height = 50
fill_from = Vector2(1, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_p5hh2")

[node name="Background" type="Node2D" parent="."]
position = Vector2(0, -173)

[node name="Sky2" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Background/Sky2"]
position = Vector2(0, -2200)
texture = SubResource("GradientTexture2D_hg8x8")

[node name="Sky" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Background/Sky"]
texture = ExtResource("2_ehhv2")

[node name="BG3" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.5, 1)
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Background/BG3"]
texture = ExtResource("3_n851i")

[node name="BG2" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.5, 1)
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Background/BG2"]
texture = ExtResource("4_tgj48")

[node name="BG1" type="Parallax2D" parent="Background"]
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Background/BG1"]
texture = ExtResource("5_lhhng")

[node name="Floor" type="Parallax2D" parent="Background"]
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Background/Floor"]
texture = ExtResource("6_57kyt")

[node name="GameCamera" parent="." instance=ExtResource("2_8dd5b")]
position = Vector2(276, -8)
zoom = Vector2(0.49, 0.49)

[node name="Building" parent="." instance=ExtResource("2_6ic3h")]
position = Vector2(143, -29)

[node name="HarvestableBuilding" parent="." instance=ExtResource("8_d4048")]
position = Vector2(307, 0)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(76, -181)

[node name="Foreground" type="Parallax2D" parent="Node2D"]
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Foreground"]
texture = ExtResource("7_v8uqo")

[node name="EndlessGround" type="Parallax2D" parent="Node2D"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(1024, 0)
repeat_times = 7

[node name="Sprite2D" type="Sprite2D" parent="Node2D/EndlessGround"]
position = Vector2(-9, 1244)
texture = SubResource("GradientTexture2D_gwuf7")

[node name="Particles" type="Parallax2D" parent="Node2D"]
repeat_size = Vector2(1200, 0)
repeat_times = 4

[node name="CPUParticles2D" type="CPUParticles2D" parent="Node2D/Particles"]
position = Vector2(6, -2919.49)
amount = 48
lifetime = 1.6
texture = SubResource("GradientTexture2D_du4d6")
emission_shape = 3
emission_rect_extents = Vector2(1200, 1)
direction = Vector2(1, 4)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 2000.0
initial_velocity_max = 2000.0
angle_min = 10.0
angle_max = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FlatInfo" parent="CanvasLayer" instance=ExtResource("13_m72j7")]
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_top = -197.0
offset_bottom = -174.0
grow_horizontal = 1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("11_r0vxq")

[node name="TenantPicker" parent="CanvasLayer/Control" instance=ExtResource("10_77nrk")]
layout_mode = 1

[node name="AddFloorContainer" parent="CanvasLayer/Control" instance=ExtResource("4_omg2c")]
layout_mode = 1
offset_left = -132.5
offset_top = -40.5
offset_right = 132.5
offset_bottom = 40.5

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -78.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="PermanentRevealCheckBox" type="CheckBox" parent="CanvasLayer/Control/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "Seethrough"

[node name="HelpButton" type="Button" parent="CanvasLayer/Control/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Help"

[node name="FinishStageButton" type="Button" parent="CanvasLayer/Control/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "NEXT DAY"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -23.0
offset_bottom = 39.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="CashLabel" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 30

[node name="LivesLabel" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 24

[node name="LivesWarningLabel" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 24
text = "Expand to please investors."
horizontal_alignment = 2

[node name="Notification" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.5
offset_right = 50.5
offset_bottom = 21.515
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Notification"]
layout_mode = 2

[node name="NotificationLabel" type="Label" parent="CanvasLayer/Control/Notification/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "NOTIFICATION"
horizontal_alignment = 1

[node name="SummaryContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("11_r0vxq")
script = ExtResource("14_5vgpf")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/SummaryContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Summary" type="RichTextLabel" parent="CanvasLayer/Control/SummaryContainer/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true
text = "fghfghfghfg
fghfg"
fit_content = true

[node name="Events" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NewStory" type="Control" parent="CanvasLayer/Control/Events"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_5vgpf")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/Events/NewStory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Events/NewStory/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Events/NewStory/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
bbcode_enabled = true
text = "Your investors are displeased with your rate of growth. They have added another floor to your building.

This will increase your upkeep costs."
fit_content = true

[node name="NewStoryButton" type="Button" parent="CanvasLayer/Control/Events/NewStory/PanelContainer/VBoxContainer" node_paths=PackedStringArray("event_screen")]
layout_mode = 2
focus_mode = 0
text = "OK"
script = ExtResource("16_2u351")
event_screen = NodePath("../../..")

[node name="HelpContainer" type="Control" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_5vgpf")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/HelpContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/HelpContainer/PanelContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "[b]CONTROLS[/b]

Zoom - Mouse Wheel or Q/E or M/N
Move Camera: WASD or Arrow Keys
Drag rooms: Left Click
Close menus: Left Click
Go to next phase: Space or bottom-right button

[b]HOW TO PLAY[/b]
Steal rooms from other buildings.
Let households move in.
Expand the building around the edges and skywards.
Don't run out of funds.
Don't disappoint investors."
fit_content = true

[node name="OutOfLivesContainer" type="Control" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_5vgpf")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/OutOfLivesContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/OutOfLivesContainer/PanelContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "[center][color=red][b]YOU STALLED INVESTMENT GROWTH TOO MUCH. NEXT TIME, EXPAND MORE OFTEN.[/b][/color]

Click to restart."
fit_content = true

[node name="Indicators" type="Node2D" parent="."]

[node name="NeighborOpinions" type="Node2D" parent="."]

[connection signal="query_add_floor" from="Building" to="." method="_on_building_query_add_floor"]
[connection signal="visibility_changed" from="CanvasLayer/FlatInfo" to="." method="_on_flat_info_visibility_changed"]
[connection signal="no_tenant_picked" from="CanvasLayer/Control/TenantPicker" to="." method="_on_tenant_picker_no_tenant_picked"]
[connection signal="tenant_picked_for_apartment" from="CanvasLayer/Control/TenantPicker" to="." method="_on_tenant_picker_tenant_picked_for_apartment"]
[connection signal="confirm_add_floor" from="CanvasLayer/Control/AddFloorContainer" to="Building" method="add_floor_by_coord"]
[connection signal="toggled" from="CanvasLayer/Control/MarginContainer2/VBoxContainer/HBoxContainer/PermanentRevealCheckBox" to="." method="_on_permanent_reveal_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/Control/MarginContainer2/VBoxContainer/HBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MarginContainer2/VBoxContainer/FinishStageButton" to="." method="_on_finish_stage_button_pressed"]
[connection signal="gui_input" from="CanvasLayer/Control/SummaryContainer" to="." method="_on_summary_container_gui_input"]
[connection signal="visibility_changed" from="CanvasLayer/Control/SummaryContainer" to="." method="_on_summary_container_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/Control/Events/NewStory/PanelContainer/VBoxContainer/NewStoryButton" to="." method="_on_new_story_button_pressed"]
[connection signal="gui_input" from="CanvasLayer/Control/HelpContainer" to="." method="_on_help_container_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Control/OutOfLivesContainer" to="." method="_on_out_of_lives_container_gui_input"]
